feat: setup prefetch
