# apps/api/src/users/users.service.ts
@@ -50,6 +50,7 @@ export class UsersService {
         location: true,
         company: true,
         aboutMe: true,
+        profilePicture: true,
         createdAt: true,
         updatedAt: true,
       },
@@ -144,6 +145,7 @@ export class UsersService {
         location: true,
         company: true,
         aboutMe: true,
+        profilePicture: true,
         createdAt: true,
         updatedAt: true,
       },
